appId: "${APP_ID}"
name: "verificationMoreInfoTestFlow"
# Suite: VerificationMoreInfo
# Consolidated test flow for VerificationMoreInfo screen
# Contains 21 test case(s):
---
- launchApp: {}
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-IntroductionFirstScreen_Cta_Login_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-IntroductionFirstScreen_Cta_Login_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "00571aad-bed9-46f5-991e-94d0805872a7"
    optional: true
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-LoginScreen_Cta_Login_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-LoginScreen_Cta_Login_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "68526003-8aad-4122-8991-06771f332513"
    optional: true
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-HomeLite_Cta_Open_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-HomeLite_Cta_Open_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "a2d65a31-9542-4b7e-9228-c730e6669899"
    optional: true
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-EligibilityRequirement_Cta_Continue_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-EligibilityRequirement_Cta_Continue_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "aa76eab4-8026-480a-ba2a-91e5336db92c"
    optional: true
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-DataClasificationOpenAccount_Cta_LetSstart_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-DataClasificationOpenAccount_Cta_LetSstart_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "2fa9b715-f553-440b-bf7d-519f8a12e053"
    optional: true
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-IdentityIdcardPhoto_Cta_Continue_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-IdentityIdcardPhoto_Cta_Continue_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "c6323571-23da-4d1c-b075-a967be93ca2e"
    optional: true
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-VerificationAddress_Cta_Continue_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-VerificationAddress_Cta_Continue_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "4c82546c-8aaf-4f78-8200-069e6ed2a930"
    optional: true
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-VerificationSelfie_Cta_Continue_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-VerificationSelfie_Cta_Continue_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "cd9257f4-7a06-4f8c-8188-56407a5f55a8"
    optional: true
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-VerificationDetails_Cta_Continue_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-VerificationDetails_Cta_Continue_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "9c49d4f7-740d-4930-9602-4131b3e63c76"
    optional: true
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-VerificationEmlpoyement_Cta_Continue_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-VerificationEmlpoyement_Cta_Continue_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "51dc64b4-0c2b-49e6-b6bd-9dadeb1060f9"
    optional: true
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-VerificationPurpose_Cta_Continue_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-VerificationPurpose_Cta_Continue_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "d6aedeed-3578-4c57-85e1-7fc3294dd17c"
    optional: true
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-ReviewAndConfirmDetails_Cta_Continue_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-ReviewAndConfirmDetails_Cta_Continue_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "545d7da9-c388-4cc7-b33f-894cd2b11370"
    optional: true
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-MarketingPreference_Cta_Continue_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-MarketingPreference_Cta_Continue_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "74a8ae30-c899-48e1-84ce-4a415f4e8998"
    optional: true
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-Amp_Cta_Continue_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-Amp_Cta_Continue_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "fb7553ae-71d3-498a-8002-662b82483031"
    optional: true
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-HomeLiteProcessing_Cta_CheckStatus_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-HomeLiteProcessing_Cta_CheckStatus_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "bcc590cf-19c2-40be-8e4b-98810b6af202"
    optional: true
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-HomeLiteMoreInfo_Cta_Continue_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-HomeLiteMoreInfo_Cta_Continue_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "042ccecd-a3dc-47ba-b9f4-f0ccf3997c7b"
    optional: true
# 1. Verify widget ASAppBar:VerificationMoreInfo_AppBar_AppBarAsappHeader_AppBar is displayed on the screen: Verifies that the widget:VerificationMoreInfo_AppBar_AppBarAsappHeader_AppBar renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "title-VerificationMoreInfo_AppBar_AppBarAsappHeader_AppBar"
- waitForAnimationToEnd: {}
# 2. Verify widget ASAppBar:VerificationMoreInfo_AppBar_AppBarAsappHeader_AppBar is displayed on the screen: Verifies that the label of widget:VerificationMoreInfo_AppBar_AppBarAsappHeader_AppBar appears correctly and is readable.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "title-VerificationMoreInfo_AppBar_AppBarAsappHeader_AppBar"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "title-VerificationMoreInfo_AppBar_AppBarAsappHeader_AppBar"
- waitForAnimationToEnd: {}
# 3. Verify widget ASText:VerificationMoreInfo_Label_YourAccount_Text is displayed on the screen: Verifies that the widget:VerificationMoreInfo_Label_YourAccount_Text renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationMoreInfo_Label_YourAccount_Text"
- waitForAnimationToEnd: {}
# 4. Verify widget ASText:VerificationMoreInfo_Label_YourAccount_Text is displayed on the screen: Verifies that the label of widget:VerificationMoreInfo_Label_YourAccount_Text appears correctly and is readable.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationMoreInfo_Label_YourAccount_Text"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationMoreInfo_Label_YourAccount_Text"
- waitForAnimationToEnd: {}
# 5. Verify widget ASProgressBar:VerificationMoreInfo_Container_ProgressBarAsprog_ProgressBar is displayed on the screen: Verifies that the widget:VerificationMoreInfo_Container_ProgressBarAsprog_ProgressBar renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationMoreInfo_Container_ProgressBarAsprog_ProgressBar"
- waitForAnimationToEnd: {}
# 6. Verify widget ASText:VerificationMoreInfo_Label_WeNeedFewMoreInformation_Text is displayed on the screen: Verifies that the widget:VerificationMoreInfo_Label_WeNeedFewMoreInformation_Text renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationMoreInfo_Label_WeNeedFewMoreInformation_Text"
- waitForAnimationToEnd: {}
# 7. Verify widget ASText:VerificationMoreInfo_Label_WeNeedFewMoreInformation_Text is displayed on the screen: Verifies that the label of widget:VerificationMoreInfo_Label_WeNeedFewMoreInformation_Text appears correctly and is readable.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationMoreInfo_Label_WeNeedFewMoreInformation_Text"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationMoreInfo_Label_WeNeedFewMoreInformation_Text"
- waitForAnimationToEnd: {}
# 8. Verify widget ASText:VerificationMoreInfo_Label_WeNeedThisInformationToPr_Text is displayed on the screen: Verifies that the widget:VerificationMoreInfo_Label_WeNeedThisInformationToPr_Text renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationMoreInfo_Label_WeNeedThisInformationToPr_Text"
- waitForAnimationToEnd: {}
# 9. Verify widget ASText:VerificationMoreInfo_Label_WeNeedThisInformationToPr_Text is displayed on the screen: Verifies that the label of widget:VerificationMoreInfo_Label_WeNeedThisInformationToPr_Text appears correctly and is readable.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationMoreInfo_Label_WeNeedThisInformationToPr_Text"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationMoreInfo_Label_WeNeedThisInformationToPr_Text"
- waitForAnimationToEnd: {}
# 10. Verify widget ASDropDown:VerificationMoreInfo_Container_DropdownFieldAsdropD_DropDown is displayed on the screen: Verifies that the widget:VerificationMoreInfo_Container_DropdownFieldAsdropD_DropDown renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-VerificationMoreInfo_Container_DropdownFieldAsdropD_DropDown"
- waitForAnimationToEnd: {}
# 11. Verify widget ASDropDown:VerificationMoreInfo_Container_DropdownFieldAsdropD_DropDown functionalities: Verifies that dropdown widget:VerificationMoreInfo_Container_DropdownFieldAsdropD_DropDown opens correctly and allows selecting an option.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-VerificationMoreInfo_Container_DropdownFieldAsdropD_DropDown"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-VerificationMoreInfo_Container_DropdownFieldAsdropD_DropDown"
- runFlow:
    file: "common/selectDropdownAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-VerificationMoreInfo_Container_DropdownFieldAsdropD_DropDown"
      OPTION_VALUE: "option"
    optional: true
- tapOn:
    point: "50%,50%"
- waitForAnimationToEnd: {}
# 12. Verify widget ASTextField:VerificationMoreInfo_Input_OtherSourceOfFunds_Input is displayed on the screen: Verifies that the widget:VerificationMoreInfo_Input_OtherSourceOfFunds_Input renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "view-VerificationMoreInfo_Input_OtherSourceOfFunds_Input"
- waitForAnimationToEnd: {}
# 13. Verify widget ASTextField:VerificationMoreInfo_Input_OtherSourceOfFunds_Input functionalities: Verifies that input widget:VerificationMoreInfo_Input_OtherSourceOfFunds_Input accepts valid input, handles long text, and supports special characters.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "view-VerificationMoreInfo_Input_OtherSourceOfFunds_Input"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "view-VerificationMoreInfo_Input_OtherSourceOfFunds_Input"
- runFlow:
    file: "common/inputTextAndWait.yaml"
    env:
      WIDGET_ID: "textInput-VerificationMoreInfo_Input_OtherSourceOfFunds_Input"
      TEXT_VALUE: "test value"
- pressKey: "Enter"
- runFlow:
    file: "common/eraseTextAndWait.yaml"
    env:
      WIDGET_ID: "view-VerificationMoreInfo_Input_OtherSourceOfFunds_Input"
- runFlow:
    file: "common/inputTextAndWait.yaml"
    env:
      WIDGET_ID: "textInput-VerificationMoreInfo_Input_OtherSourceOfFunds_Input"
      TEXT_VALUE: "test value"
- pressKey: "Enter"
- runFlow:
    file: "common/eraseTextAndWait.yaml"
    env:
      WIDGET_ID: "view-VerificationMoreInfo_Input_OtherSourceOfFunds_Input"
- runFlow:
    file: "common/inputTextAndWait.yaml"
    env:
      WIDGET_ID: "textInput-VerificationMoreInfo_Input_OtherSourceOfFunds_Input"
      TEXT_VALUE: "test value"
- pressKey: "Enter"
- runFlow:
    file: "common/eraseTextAndWait.yaml"
    env:
      WIDGET_ID: "view-VerificationMoreInfo_Input_OtherSourceOfFunds_Input"
- waitForAnimationToEnd: {}
# 14. Verify widget ASDropDown:VerificationMoreInfo_Container_DropdownFieldAsdropD_DropDo_2 is displayed on the screen: Verifies that the widget:VerificationMoreInfo_Container_DropdownFieldAsdropD_DropDo_2 renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-VerificationMoreInfo_Container_DropdownFieldAsdropD_DropDo_2"
- waitForAnimationToEnd: {}
# 15. Verify widget ASDropDown:VerificationMoreInfo_Container_DropdownFieldAsdropD_DropDo_2 functionalities: Verifies that dropdown widget:VerificationMoreInfo_Container_DropdownFieldAsdropD_DropDo_2 opens correctly and allows selecting an option.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-VerificationMoreInfo_Container_DropdownFieldAsdropD_DropDo_2"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-VerificationMoreInfo_Container_DropdownFieldAsdropD_DropDo_2"
- runFlow:
    file: "common/selectDropdownAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-VerificationMoreInfo_Container_DropdownFieldAsdropD_DropDo_2"
      OPTION_VALUE: "option"
    optional: true
- tapOn:
    point: "50%,50%"
- waitForAnimationToEnd: {}
# 16. Verify widget ASImage:VerificationMoreInfo_Image_GppGood_Image is displayed on the screen: Verifies that the widget:VerificationMoreInfo_Image_GppGood_Image renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationMoreInfo_Image_GppGood_Image"
- waitForAnimationToEnd: {}
# 17. Verify widget ASText:VerificationMoreInfo_Label_YourDataIsProtectedAccord_Text is displayed on the screen: Verifies that the widget:VerificationMoreInfo_Label_YourDataIsProtectedAccord_Text renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationMoreInfo_Label_YourDataIsProtectedAccord_Text"
- waitForAnimationToEnd: {}
# 18. Verify widget ASText:VerificationMoreInfo_Label_YourDataIsProtectedAccord_Text is displayed on the screen: Verifies that the label of widget:VerificationMoreInfo_Label_YourDataIsProtectedAccord_Text appears correctly and is readable.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationMoreInfo_Label_YourDataIsProtectedAccord_Text"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationMoreInfo_Label_YourDataIsProtectedAccord_Text"
- waitForAnimationToEnd: {}
# 19. Verify widget ASButton:VerificationMoreInfo_Cta_Continue_Button is displayed on the screen: Verifies that the widget:VerificationMoreInfo_Cta_Continue_Button renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-VerificationMoreInfo_Cta_Continue_Button"
- waitForAnimationToEnd: {}
# 20. Verify event:onPress using widget ASButton:VerificationMoreInfo_Cta_Continue_Button in screen VerificationMoreInfo should navigate to LiteHomeVerifying: Verify that triggering event:onPress using widget: VerificationMoreInfo_Cta_Continue_Button in screen VerificationMoreInfo correctly navigates to the next screen LiteHomeVerifying with all required fields filled beforehand.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-VerificationMoreInfo_Cta_Continue_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-VerificationMoreInfo_Cta_Continue_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "9354e3dd-261a-47a6-9592-e8c4fae4fa5d"
    optional: true
- waitForAnimationToEnd: {}
# 21. Navigate back after verifying event:onPress from ASButton:VerificationMoreInfo_Cta_Continue_Button: This test case checks if the Navigate back after verifying event:onPress from ASButton:VerificationMoreInfo_Cta_Continue_Button works correctly.
- runFlow:
    file: "common/backAndWait.yaml"
    env: {}
- waitForAnimationToEnd: {}
